add tests for all work with files/data and for parsing + small adjustments in other classes